# CipherApp

./: CipherAppInstaller.deb  README.md
RowCipherApp/: CMakeLists.txt  test.cpp
RowCipherApp/Entities/: CodeWordCipher.cpp  MagicSquareCipher.cpp  MagicSquareUtils.cpp  SkitalaCipher.cpp
RowCipherApp/app/: CMakeLists.txt  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
RowCipherApp/include/: CodeWordCipher.h  ICipher.h  ICipherFactory.h  MagicSquareCipher.h  MagicSquareUtils.h  SkitalaCipher.h
RowCipherApp/plugins/codeword/: CMakeLists.txt  CodeWordCipherFactory.cpp  CodeWordCipherFactory.h
RowCipherApp/plugins/magic/: CMakeLists.txt  MagicSquareCipherFactory.cpp  MagicSquareCipherFactory.h
RowCipherApp/plugins/skitala/: CMakeLists.txt  SkitalaCipherFactory.cpp  SkitalaCipherFactory.h
